# dominominal

./: .env.example  .gitignore  composer.json  dominominal.version.json  package-lock.json  package.json  phpstan.neon  phpunit.xml  pint.json
bootstrap/: app.php  providers.php
config/: app.php  cors.php  mail.php  services.php
database/factories/: CompanyFactory.php  EmployeeFactory.php  PayrollDetailFactory.php  PayrollFactory.php  SalaryAdjustmentFactory.php  SalaryFactory.php  SettingFactory.php
database/migrations/: 2025_01_10_013923_create_settings_table.php  2025_01_11_044111_add_setup_setting.php  2025_06_30_180340_create_companies_table.php  2025_07_01_215210_create_employees_table.php  2025_07_03_213122_create_salaries_table.php  2025_07_04_032803_create_loans_table.php  2025_07_04_033618_create_payrolls_table.php  2025_07_04_034337_create_payroll_details_table.php  2025_07_04_034441_create_salary_adjustments_table.php  2025_07_05_031207_create_payroll_detail_salary_adjustment_table.php  2025_07_05_031207_create_payroll_salary_adjustments_table.php  2025_07_05_203836_create_payroll_detail_salary_adjustment_table.php  2025_07_06_213058_setup_salary_adjustments.php  (+5 more)
public/: splashscreen.html
routes/: web.php
src/: helpers.php
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  database.rs  lib.rs  main.rs  server.rs  updater.rs  window.rs
src-tauri/src/global/: mod.rs
src-tauri/src/window/: mod.rs
tauri/: Cargo.toml  tauri.conf.json
tests/: Pest.php  TestCase.php
(+159 files in other folders)
