[package]
name = "dominominal-desktop"
version = "0.1.8"
description = "Dominominal's desktop wrapper"
authors = ["lea-reift"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.3.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.6.2", features = [] }
tauri-plugin-log = "2"
sysinfo = "0.36.0"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
sqlite = "0.37.0"
reqwest = "0.12"
tokio = { version = "1", features = ["time"] }
ctrlc = "3.4"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"
